Some minor bugs are fixed!

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.svg" alt="Fylo Logo" style="width: 110px;">
+                <img src="images/logo.svg" alt="Fylo Logo">
             </div>
             <ul class="list">
                 <li><a href="index.html">Features</a></li>
