--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="first-page">
 
             <figure class="first-image">
-                <img src="images/illustration-intro.png" id="main-image">
+                <img src="images/illustration-intro.png" id="main-image" alt="Header Image">
             </figure>
             <h1 class="common">All your files in one secure location, <br>accessible anywhere.</h1>
             <p class="common"> Fylo stores all your most important files in one secure location. Access them wherever
@@ -59,28 +59,28 @@
         <article class="icons-article">
 
             <section class="icons">
-                <img src="images/1.svg">
+                <img src="images/1.svg" alt="Icon">
                 <h3 class="common"> Access your files, anywhere</h3>
                 <p class="common">The ability to use a smartphone, tablet, or computer to access your account means your
                     files follow you everywhere.</p>
             </section>
 
             <section class="icons">
-                <img src="images/2.svg">
+                <img src="images/2.svg" alt="Icon">
                 <h3 class="common"> Security you can trust</h3>
                 <p class="common">2-factor authentication and user-controlled encryption are just a couple of the
                     security
                     features we allow to help secure your files.</p>
             </section>
             <section class="icons">
-                <img src="images/3.svg" style="width: 70px">
+                <img src="images/3.svg" style="width: 70px" alt="Icon">
                 <h3 class="common">Real-time collaboration</h3>
                 <p class="common"> Securely share files and folders with friends, family and colleagues for live
                     collaboration.
                     No email attachments required.</p>
             </section>
             <section class="icons">
-                <img src="images/4.svg">
+                <img src="images/4.svg" alt="Icon">
                 <h3 class="common"> Store any type of file
                 </h3>
                 <p class="common"> Whether you're sharing holidays photos or work documents, Fylo has you covered
@@ -91,7 +91,7 @@
         </article>
 
         <section class="second-page">
-            <img src="images/illustration-stay-productive.png" style="max-width: 100%; padding: 2rem;">
+            <img src="images/illustration-stay-productive.png" style="max-width: 100%; padding: 2rem;" alt="Icon">
             <div class="second-page-image-text">
                 <h3>Stay productive, wherever you are</h3>
                 <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file
@@ -110,7 +110,7 @@
                     has
                     become a well-oiled collaboration machine.</p>
                 <div class="card-info">
-                    <img src="images/profile-1.jpg" style="border-radius: 100%; width: 40px;">
+                    <img src="images/profile-1.jpg" style="border-radius: 100%; width: 40px;" alt="Satish Patel">
                     <figcaption>
                         <h3> Satish Patel</h3>
                         <p>
@@ -127,7 +127,7 @@
                     has
                     become a well-oiled collaboration machine.</p>
                 <div class="card-info">
-                    <img src="images/profile-2.jpg" style="border-radius: 100%; width: 40px;">
+                    <img src="images/profile-2.jpg" style="border-radius: 100%; width: 40px;" alt="Bruce McKenzie">
                     <figcaption>
                         <h3>Bruce McKenzie</h3>
                         <p>
@@ -143,7 +143,7 @@
                     has
                     become a well-oiled collaboration machine.</p>
                 <div class="card-info">
-                    <img src="images/profile-3.jpg" style="border-radius: 100%; width: 40px;">
+                    <img src="images/profile-3.jpg" style="border-radius: 100%; width: 40px;" alt="Iva Boyd">
                     <figcaption>
                         <h3> Iva Boyd</h3>
                         <p>
