--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         .attribution a {
             color: hsl(228, 45%, 44%);
         }
-
     </style>
 </head>
 
@@ -46,9 +45,9 @@
     <main>
         <section class="first-page">
 
-            <figure class="first-image">
+            <div class="first-image">
                 <img src="images/illustration-intro.png" id="main-image" alt="Header Image">
-            </figure>
+            </div>
             <h1 class="common">All your files in one secure location, <br>accessible anywhere.</h1>
             <p class="common"> Fylo stores all your most important files in one secure location. Access them wherever
                 you need, share and collaborate with friends family, and co-workers.</p>
@@ -60,7 +59,7 @@
 
             <section class="icons">
                 <img src="images/1.svg" alt="Icon">
-                <h3 class="common"> Access your files, anywhere</h3>
+                <h2 class="common"> Access your files, anywhere</h2>
                 <p class="common">The ability to use a smartphone, tablet, or computer to access your account means your
                     files follow you everywhere.</p>
             </section>
@@ -74,15 +73,15 @@
             </section>
             <section class="icons">
                 <img src="images/3.svg" style="width: 70px" alt="Icon">
-                <h3 class="common">Real-time collaboration</h3>
+                <h2 class="common">Real-time collaboration</h2>
                 <p class="common"> Securely share files and folders with friends, family and colleagues for live
                     collaboration.
                     No email attachments required.</p>
             </section>
             <section class="icons">
                 <img src="images/4.svg" alt="Icon">
-                <h3 class="common"> Store any type of file
-                </h3>
+                <h2 class="common"> Store any type of file
+                </h2>
                 <p class="common"> Whether you're sharing holidays photos or work documents, Fylo has you covered
                     allowing for all
                     file types to be securely stored and shared.</p>
@@ -109,7 +108,7 @@
                 <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team
                     has
                     become a well-oiled collaboration machine.</p>
-                <div class="card-info">
+                <figure class="card-info">
                     <img src="images/profile-1.jpg" style="border-radius: 100%; width: 40px;" alt="Satish Patel">
                     <figcaption>
                         <h3> Satish Patel</h3>
@@ -117,7 +116,7 @@
                             <small>Founder & CEO, Huddle</small>
                         </p>
                     </figcaption>
-                </div>
+                </figure>
 
             </section> <!-- End of card! -->
 
@@ -126,7 +125,7 @@
                 <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team
                     has
                     become a well-oiled collaboration machine.</p>
-                <div class="card-info">
+                <figure class="card-info">
                     <img src="images/profile-2.jpg" style="border-radius: 100%; width: 40px;" alt="Bruce McKenzie">
                     <figcaption>
                         <h3>Bruce McKenzie</h3>
@@ -134,7 +133,7 @@
                             <small>Founder & CEO, Huddle</small>
                         </p>
                     </figcaption>
-                </div>
+                </figure>
 
             </section> <!-- Emd of card! -->
 
@@ -142,7 +141,7 @@
                 <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team
                     has
                     become a well-oiled collaboration machine.</p>
-                <div class="card-info">
+                <figure class="card-info">
                     <img src="images/profile-3.jpg" style="border-radius: 100%; width: 40px;" alt="Iva Boyd">
                     <figcaption>
                         <h3> Iva Boyd</h3>
@@ -150,7 +149,7 @@
                             <small>Founder & CEO, Huddle</small>
                         </p>
                     </figcaption>
-                </div>
+                </figure>
 
             </section> <!-- Emd of card! -->
         </section> <!-- Emd of team! -->
@@ -160,7 +159,7 @@
             <h2> Get early access today</h2>
             <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
                 questions, our support team would be happy to help you.</p>
-            <input type="email" placeholder="email@example.com">
+            <input type="email" placeholder="email@example.com" name="email">
             <button id="second-btn"> Get Started For Free
             </button>
         </section> <!-- End of early-access! -->
@@ -176,8 +175,8 @@
                     Enim,<br> harum.
                     Lorem ipsum dolor sit.</p>
                 <div>
-                    <p><img src="images/icon-phone.svg"> +12098 4184 1</p>
-                    <p><img src="images/icon-email.svg">example@fylo.com</p>
+                    <p><img src="images/icon-phone.svg" alt="Phone icon"> +12098 4184 1</p>
+                    <p><img src="images/icon-email.svg" alt="Email icon">example@fylo.com</p>
                 </div>
             </div>
 
